[package]
name = "emmvrc_detector"
version = "0.1.0"
authors = ["xKiraiChan <xKiraiChan@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
text_io = "0.1.8"
reqwest = "0.11.0"
tokio = { version = "1.0.2", features = ["full"] }